# Basketball-Predictions

./: .gitignore  README.md  add_more_teams.py  decors.py  generate_save_sims.py  git_script.ps1  git_tool.py  info.py  logger.py  main.py  main_v2.py  main_v3.py  nba_teams_2024.csv  nba_teams_2024_test.csv  pyproject.toml  scan_log.txt  sim_core.py  styles.py  team_images.py  test_git_tool.py  validate.py
pages/: page_2.py  page_3.py  page_4.py  page_5.py
