[project]
name = "basketball-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inquirerpy>=0.3.4",
    "matplotlib>=3.10.3",
    "psutil>=7.0.0",
    "questionary>=2.1.0",
    "rich>=14.0.0",
    "streamlit>=1.45.1",
]
