[project]
name = "basketball-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "cython>=3.1.2",
    "inquirerpy>=0.3.4",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "psutil>=7.0.0",
    "pyinstaller>=6.14.1",
    "pyminizip>=0.2.6",
    "questionary>=2.1.0",
    "rich>=14.0.0",
    "selenium>=4.33.0",
    "streamlit>=1.45.1",
]
